--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ski-day-counter-redux",
-  "version": "0.1.3",
+  "version": "0.2.1",
   "description": "A redux version of Eve Porcello's ski day counter.",
   "main": "./dist",
   "scripts": {
@@ -23,5 +23,13 @@
   "bugs": {
     "url": "https://github.com/MoonTahoe/ski-day-counter-redux/issues"
   },
-  "homepage": "https://github.com/MoonTahoe/ski-day-counter-redux#readme"
+  "homepage": "https://github.com/MoonTahoe/ski-day-counter-redux#readme",
+  "dependencies": {
+    "redux": "^3.6.0"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.16.0",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0"
+  }
 }
