--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "ski-day-counter-redux",
-  "version": "0.3.4",
+  "version": "0.4.1",
   "description": "A redux version of Eve Porcello's ski day counter.",
   "main": "./dist",
   "scripts": {
-    "challenge-a": "babel-node ./src/challenges/CLEAR_SUGGESTIONS.js",
-    "challenge-b": "babel-node ./src/challenges/CHANGE_SUGGESTIONS.js",
-    "challenge-c": "babel-node ./src/challenges/FETCH_RESORT_NAMES.js",
-    "challenge-d": "babel-node ./src/challenges/CANCEL_FETCHING.js",
-    "challenge-e": "babel-node ./src/challenges/CACHE_RESORT_NAMES.js"
+    "build": "./node_modules/.bin/webpack --progress",
+    "dev": "./node_modules/.bin/webpack-dev-server"
   },
   "repository": {
     "type": "git",
@@ -29,12 +26,24 @@
   },
   "homepage": "https://github.com/MoonTahoe/ski-day-counter-redux#readme",
   "dependencies": {
+    "react": "^15.3.2",
     "redux": "^3.6.0"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
+    "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
-    "babel-preset-es2015": "^6.16.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
-    "expect": "^1.20.2"
+    "css-loader": "^0.25.0",
+    "json-loader": "^0.5.4",
+    "node-sass": "^3.10.1",
+    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "sass-loader": "^4.0.2",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.2"
   }
 }
