--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ski-day-counter-redux",
-  "version": "0.4.3",
+  "version": "0.4.4",
   "description": "A redux version of Eve Porcello's ski day counter.",
   "main": "./dist",
   "scripts": {
@@ -31,7 +31,8 @@
     "express": "^4.14.0",
     "minimist": "^1.2.0",
     "react": "^15.3.2",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
