--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ski-day-counter-redux",
-  "version": "0.4.5",
+  "version": "0.4.6",
   "description": "A redux version of Eve Porcello's ski day counter.",
   "main": "./dist",
   "scripts": {
@@ -29,8 +29,10 @@
   "dependencies": {
     "cors": "^2.8.1",
     "express": "^4.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "minimist": "^1.2.0",
     "react": "^15.3.2",
+    "react-dom": "^15.3.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0"
   },
