--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
     "autoprefixer-loader": "^3.2.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-latest": "^6.16.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "css-loader": "^0.25.0",
     "json-loader": "^0.5.4",
-    "node-sass": "^3.10.1",
+    "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^1.3.0",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^3.10.0",
+    "webpack-dev-server": "^2.9.5"
   }
 }
